# tidyfaf

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: API_REFERENCE.md  data_schema.md
docs/html/: index.html  search.js  tidyfaf.html
src/tidyfaf/: __init__.py  download.py  metadata.py  visualization.py
src/tidyfaf/data/: __init__.py  loader.py  schema.py
src/tidyfaf/query/: __init__.py  base.py  cache.py  county_query.py  faf_query.py  forecast_query.py  network_query.py  state_query.py  validation.py
