[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tidyfaf"
version = "0.1.2"
description = "A statistical data access tool for the Freight Analysis Framework (FAF5)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [
  {name = "FreightPulse Team", email = "dmpandit@umd.edu"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pandas>=1.5.0",
    "geopandas>=0.12.0",
    "pyarrow>=10.0.0",
    "pydeck>=0.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "pyogrio>=0.4.0",
    "openpyxl>=3.0.0",
    "shapely>=1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/freightpulse/tidyfaf"
"Bug Tracker" = "https://github.com/freightpulse/tidyfaf/issues"

[tool.setuptools.packages.find]
where = ["src"]


